--- a/Projet d'axe/emission et serie.html
+++ b/Projet d'axe/emission et serie.html
@@ -24,109 +24,109 @@
         <h1> Emissions et Séries TV</h1>
     </span>
   <span class="all-movies">
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?cs=0&sxsrf=ALiCzsZ-mdh-_aCzZUEtmUicVsLXQWsn0g:1667130244384&q=True+Detective&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVAKzC4uqKgvLtaSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIla-kKLSVAWX1JLU5JLMslQAiEGOgUcAAAA&sa=X&ved=2ahUKEwiey4iQ8If7AhVRgc4BHRyxBqAQ9OUBegQICRAD&biw=1488&bih=746&dpr=1.25">
             <img src="images/True détective.jpg" alt="affiche du film">
             <h2>True Detective</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?cs=0&sxsrf=ALiCzsZ-mdh-_aCzZUEtmUicVsLXQWsn0g:1667130244384&q=The+North+Water&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NMwwzq0wLDMz1JLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1j5QzJSFfzyi0oyFMITS1KLAM_u3fdLAAAA&sa=X&ved=2ahUKEwiey4iQ8If7AhVRgc4BHRyxBqAQ9OUBegQICRAF&biw=1488&bih=746&dpr=1.25">
             <img src="images/The north water.jpg" alt="affiche du film">
             <h2>The North Water</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?cs=0&sxsrf=ALiCzsZ-mdh-_aCzZUEtmUicVsLXQWsn0g:1667130244384&q=Ballykissangel&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOIEsU0Mc4yytaSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIlY-p8ScnMrszOLixLz01BwA2O0dKEYAAAA&sa=X&ved=2ahUKEwiey4iQ8If7AhVRgc4BHRyxBqAQ9OUBegQICRAH&biw=1488&bih=746&dpr=1.25">
             <img src="images/Bally.jpg" alt="affiche du film">
             <h2>Ballykissangel</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbYKmLzXqnXkGJN99GZ_x_qVG37pQ:1667131290238&q=Scrubs&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOIEs9OK4-O1pLKTrfQLUvMLclKBVFFxfp5VSZlCcUZ-efEiVrbg5KLSpOIJbIwARytwrEEAAAA&lei=mmdeY-qUDpCKlwS9uZ_gCA">
             <img src="images/scrubs.jpg" alt="affiche du film">
             <h2>Scrubs</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsY8BtYOK0-OUaR_Se4QZUCFP_l7GA:1667131375360&q=Falling+for+a+Dancer&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVAKzTQqNksrNtKSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIlYRt8ScnMy8dIW0_CKFRAWXxLzk1KIJbIwALAIVC1AAAAA&lei=72deY4jUFcj2lwSA177ADA">
             <img src="images/falling for a dancer.jpg" alt="affiche du film">
             <h2>Falling for a Dancer</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsZibeOdAz6m469x-BONhclwmQpoyA:1667131480630&q=colin+farrell+the+penguin&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NCwxtEgyKCrP1ZLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1glk_NzMvMU0hKLilJzchRKMlIVClLz0ksz8yawMQIAJssLBVgAAAA&lei=WGheY7iJJvSLur4Ps_eLuAg">
             <img src="images/penguin-header.webp" alt="affiche du film">
             <h2>the penguin</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsYk-wuDe9BA4oy1OFhVE8sALuDkQw:1667131535468&q=colin+farrell+total+recall+-+4k&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NEwzKagwLc_K05LKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1jlk_NzMvMU0hKLilJzchRK8ksScxSKUpMTgRxdBZPsCWyMAOcWwh5eAAAA&lei=j2heY-aVHIeRlwTT5oWIDQ">
             <img src="images/total recall.jpg" alt="affiche du film">
             <h2>colin farrell total recall - 4k</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsaXJ5iQq4XnKPL27oiWmJFsEpuiAA:1667131633608&q=minority+report+4k&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NEwzKagwMc3K05LKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1iFcjPz8osySyoVilIL8otKFEyyJ7AxAgBtVEU2UQAAAA&lei=8WheY5TeJNCWa-CFt7gO">
             <img src="images/tom cruiser.jpg" alt="affiche du film">
             <h2>minority report 4k</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href=https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsYKrTcIE5MSHWQFrdTyUAfOsau8kQ:1667131714816&q=colin+farrell+in+loving+memory&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOIEsdMKjXOKtaSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIla55PyczDyFtMSiotScHAUgMye_LDMvXSE3NTe_qHICGyMAUyOh21kAAAA&lei=QmleY_63MYKKao2GicgD"">
             <img src="images/In loving.jpg" alt="affiche du film">
             <h2> In loving memory</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbrjHTAjjbp8q5ihlaKHcf45w-KFw:1667131778205&q=L%27H%C3%A9ritage+empoisonn%C3%A9&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NExKNs-uykgy0pLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1jFfdQ9Dq8syixJTE9VSM0tyM8EyucdXjmBjREAkzPs-FYAAAA&lei=gmleY8GQDMK8a6uOidAI">
             <img src="images/L'homme empoisonné.jpg" alt="affiche du film">
             <h2>L'Héritage empoisonné</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsZfEPgn_1VZMll-qpaluST0kEDacw:1667131847673&q=actors+on+actors&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NEyqMqgsNDEx1pLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1gFEpNL8ouKFfLzFCCsCWyMAFPQpudPAAAA&lei=i2leY6HBNc2mabeXn4gN">
             <img src="images/actors on actors.png" alt="affiche du film">
             <h2>actors on actors</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbOoS7HU6mUEyUjuOj-NKRjAYzO8w:1667131949564&q=colin+farrell+trinity+tales&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVAKzzZNTioyztKSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIlbp5PyczDyFtMSiotScHIWSosy8zJJKhZLEnNTiCWyMAJjT24xXAAAA&lei=LWpeY8GHIpCZlwT71LCQBg">
             <img src="images/Trinity_Tales.jpg" alt="affiche du film">
             <h2>Trinity Tales</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbR3COGnkjJJUNQQiVPhrlGAhFPow:1667132047620&q=colin+farrell+legend+of+cambria&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NMwqN4kvKrEs1pLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1jlk_NzMvMU0hKLilJzchRyUtNT81IU8tMUkhNzk4oyEyewMQIAisFmFF4AAAA&lei=j2peY5K7Jcz5lwT98LG4CA">
             <img src="images/Legends of camera.jpg" alt="affiche du film">
             <h2>Legend of Camera</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbR3COGnkjJJUNQQiVPhrlGAhFPow:1667132047620&q=colin+farrell+lytton%27s+diary&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVAKzzZMzTAqKtKSyk630C1LzC3JSgVRRcX6eVUmZQnFGfnnxIlaZ5PyczDyFtMSiotScHIWcypKS_Dz1YoWUzMSiyglsjACInEl2WAAAAA&lei=j2peY5K7Jcz5lwT98LG4CA">
             <img src="images/lytton diary.jpg" alt="affiche du film">
             <h2>Lytton's diary</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsZejvY7a-GH8uPtpCs2bU7t9mXK7Q:1667132207617&q=Seven+Faces+of+Woman&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLRT9c3zEiKzzAwjjfTkspOttIvSM0vyEkFUkXF-XlWJWUKxRn55cWLWEWCU8tS8xTcEpNTixXy0xTC83MT8yawMQIAziynxVIAAAA&lei=L2teY9ylJY7eao7AiagC">
             <img src="images/Seven faces woman.png" alt="affiche du film">
             <h2>Seven Faces of Woman</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsbB0K5cnAIpMafSmtlqq2SwXZE5tQ:1667132275234&q=colin+farrell+henry%E2%80%99s+leg&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLWT9c3NDLMLk8uKNaSyk620i9IzS_ISQVSRcX5eVYlZQrFGfnlxYtYpZPzczLzFNISi4pSc3IUMlLziiofNcwsVshJTZ_AxggA-Ect4FgAAAA&lei=c2teY7f6Dc2BlwSL2rCoBQ">
             <img src="images/henry leg.jpg" alt="affiche du film">
             <h2>Henry Leg</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsZ0sdSrSDlCNi8EF3XrezG8ZkojgQ:1667132356860&q=colin+farrell+agatha+and+the+curse+of+ishtar&stick=H4sIAAAAAAAAAONgFuLSz9U3MCyvqKwwVOLVT9c3NMywNMgySja00JLKTrbSL0jNL8hJBVJFxfl5ViVlCsUZ-eXFi1h1kvNzMvMU0hKLilJzchQS0xNLMhIVEvNSFEoyUhWSS4uKUxXy0xQyizNKEosmsDECAFaf9r5rAAAA&lei=xGteY4qMNLK_lwSsyYroDw">
             <img src="images/Agatha.jpg" alt="affiche du film">
             <h2>Agatha and the curse of ishtar</h2>
         </a>
     </div>
-    <div>
+    <div class="case">
         <a href="https://www.google.com/search?sa=X&cs=0&biw=1488&bih=746&sxsrf=ALiCzsau74FRgMTfUzpTEgmR8GVXtSbSUw:1667132425110&q=colin+farrell+hbo+first+look:+the+banshees+of+inisherin&stick=H4sIAAAAAAAAAA3GMQ7CMAwAQCFEhZBYGJksRhaTCSm_aSOHhBq7iiPS_oI39KV0ujvuLyf84MO1eZnd7YwvdK6G98Kuyf06Bo8T6cS0UUzF1y9Y0mbr4RmUs0DsSyFmSINCzMUqsOrooSaCoRdLRAYaIUveXrL8ut0fEEJW0HYAAAA&lei=CWxeY-ClBoXka8P1otgH">
             <img src="images/look first.webp" alt="affiche du film">
             <h2>HBO first look: the banshees of inisherin</h2>
@@ -152,6 +152,7 @@
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </body>
 </html>
