--- a/Projet d'axe/index.html
+++ b/Projet d'axe/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
      <title>Colin Farrell</title>
 </head>
-<body>
+<body class="bdy">
+  <button class="nuit">Night Mode</button>
   <nav class="barmenu">
     <ul class="boutons">
       <a href="son-histoire.html"> <li  class="btn"> Son histoire </li> </a>
@@ -63,7 +64,7 @@
     <div class="carte-act1">
       <img class="apropos" src="images/Colin Farel.jpg" alt="Images de l'acteur">
       <h1 class="titres-cartes">A propos</h1>
-      <p class="description-cartes"> 
+      <p class="description-cartes" > 
         Date/Lieu de naissance : 31 mai 1976 (Âge: 46 ans), Castleknock, Irlande
         Enfants : Henry Tadeusz Farrell, James Padraig Farrell
         Taille : 1,78 m
@@ -77,15 +78,16 @@
     <div class="carte-act2">
       <img class="hollywood" src="images/hollywood.jpg" alt=" photo de hollywood">
       <h1 class="titres-cartes">Ascension Holywoodienne</h1>
-      <p class="description-cartes"> L'année 2003 marque ainsi un premier tournant, placé sous le sceau de l'action : l'acteur retrouve d'abord le réalisateur Joel Schumacher pour Phone Game, un thriller concept où il est quasiment le seul personnage principal à l'écran, puisqu'il incarne un jeune playboy pris au piège par un psychopathe dans une cabine téléphonique. Puis il évolue aux côtés d Al Pacino dans La Recrue, de Roger Donaldson, puis partage l'affiche avec Samuel L. Jackson du thriller d'action S.W.A.T.. Puis il continue à cultiver une ambigüité concernant son image, en prêtant ses traits au super-vilain Bullseye dans l'adaptation du comic book Daredevil.</p>
+      <p class="description2"><p class="description-cartes"> L'année 2003 marque ainsi un premier tournant, placé sous le sceau de l'action : l'acteur retrouve d'abord le réalisateur Joel Schumacher pour Phone Game, un thriller concept où il est quasiment le seul personnage principal à l'écran, puisqu'il incarne un jeune playboy pris au piège par un psychopathe dans une cabine téléphonique. Puis il évolue aux côtés d Al Pacino dans La Recrue, de Roger Donaldson, puis partage l'affiche avec Samuel L. Jackson du thriller d'action S.W.A.T.. Puis il continue à cultiver une ambigüité concernant son image, en prêtant ses traits au super-vilain Bullseye dans l'adaptation du comic book Daredevil.</p> </p>
     </div>
 
     <div class="carte-act3"> 
       <img class="action-coupé" src="images/action-coupé.jpg" alt="panneau action ou coupé des réalisateur">
       <h1  class="titres-cartes"> Grand réalisateur</h1>
-      <p class="description-cartes"> Sa performance marque ainsi le début de la seconde partie de sa carrière : celle placée sous la direction de grands cinéastes. En 2005, il joue John Smith dans une nouvelle adaptation de l'histoire de Pocahontas, Le Nouveau Monde, de Terrence Malick. Cette fresque historique et mythique impressionne la critique, mais déçoit au box-office.
+
+      <p class="description3"><p class="description-cartes"> Sa performance marque ainsi le début de la seconde partie de sa carrière : celle placée sous la direction de grands cinéastes. En 2005, il joue John Smith dans une nouvelle adaptation de l'histoire de Pocahontas, Le Nouveau Monde, de Terrence Malick. Cette fresque historique et mythique impressionne la critique, mais déçoit au box-office.
        De même en 2006, lorsqu'il reprend au côté de Jamie Foxx le rôle de Sonny Crockett dans Miami Vice : Deux flics à Miami, un autre film à gros budget signé Michael Mann. Il y interprète un flic ombrageux, flirtant avec l'illégalité, et épris d'une femme d'affaires impitoyable incarnée par l'actrice chinoise Gong Li. Les résultats au box-office sont également décevants.
-      </p>
+      </p> </p>
     </div>
   </section>
   <section class="grands-succès">
@@ -147,6 +149,10 @@
 
   <h2 class="Merci">Merci</h2>
 
+  <button class="plus">En savoir + </button>
+
+  <ul class="list"></ul>
+
   <footer class="footer">
    <span>
      <h2 class="réseau-sociaux">Réseau sociaux :</h2>
@@ -180,8 +186,10 @@
       </div>
     </section>
   </footer>
-    
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    
+  <script src="script.js"></script>
 </body>
 </html>
+
+
