--- a/Projet d'axe/son-histoire.html
+++ b/Projet d'axe/son-histoire.html
@@ -221,6 +221,7 @@
             En 2019, il tourne sous la direction de Tim Burton dans le film live de Dumbo aux côtés de Michael Keaton et Danny DeVito. La même année, il tourne également pour Guy Ritchie dans The Gentlemen avec Matthew McConaughey, Charlie Hunnam et Hugh Grant. Toujours en 2019, il est choisi pour incarner le Pingouin dans la nouvelle saga The Batman de Matt Reeves face à Robert Pattinson, sortie en 2022. La même année, il retrouve Martin McDonagh dans le drame Les Banshees d'Inisherin où il retrouve également son compatriote Brendan Gleeson. Sa performance lui vaut la Coupe Volpi de la meilleure interprétation masculine à la Mostra de Venise 2022.
         </p>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-        </body>
+        <script src="script.js"></script> 
+    </body>
 
 </html>
